--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -43,6 +43,8 @@
     --Black: #191919;
     --White: #d4d4d4;
     --Light-Green: #63da9d;
+    --Red: #ff453a;
+    --Violet: #5e5ce6;
   }
 
   .dark {
